--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.1",
     "@sparticuz/chromium": "^141.0.0",
+    "@uploadthing/react": "^7.3.3",
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "daisyui": "^5.5.0",
@@ -21,7 +22,9 @@
     "puppeteer": "^24.29.1",
     "puppeteer-core": "^24.29.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "streamifier": "^0.1.1",
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
