--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "bcryptjs": "^3.0.3",
     "cloudinary": "^2.8.0",
     "daisyui": "^5.5.0",
+    "framer-motion": "^12.23.24",
     "html2pdf.js": "^0.12.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
     "mongoose": "^8.19.3",
     "next": "16.0.1",
