--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@react-pdf/renderer": "^4.3.1",
     "@sparticuz/chromium": "^141.0.0",
     "@uploadthing/react": "^7.3.3",
@@ -16,10 +17,12 @@
     "cloudinary": "^2.8.0",
     "daisyui": "^5.5.0",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.553.0",
-    "mongoose": "^8.19.3",
+    "mongoose": "^8.20.1",
     "next": "16.0.1",
     "puppeteer": "^24.29.1",
     "puppeteer-core": "^24.29.1",
